Clean up Sonar warnings
This makes a pass at fixing up minor issues reported by Sonar.

JIRA: YANGTOOLS-1576
Change-Id: I629b2504d374310965fa92bbfc4ea1d23d4b0935
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>